Bug 505977 - Home page actions not working
Summary: Home page actions not working
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 506009 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-22 15:24 UTC by İsmail
Modified: 2025-07-01 02:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description İsmail 2025-06-22 15:24:50 UTC
SUMMARY
Actions on home page do not work anymore.

STEPS TO REPRODUCE
1. Open KMyMoney
2. Open its home page
3. Click on any clickable account or schedule actions

OBSERVED RESULT
Clicking on actionable accounts and schedule actions does not respond to their action.

EXPECTED RESULT
Clicking on an account should take me to its ledger. Clicking on a schedule action should show a transaction dialog window.

SOFTWARE/OS VERSIONS
Operating System: Garuda Linux 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.3-zen1-1-zen (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 whatifgodwasoneofus 2025-06-22 21:13:15 UTC
I am experiencing the same identical issue.

My config is:
Operating System: Manjaro Linux 
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.3-1-MANJARO (64-bit)
Graphics Platform: Wayland
Comment 2 Antonio Rojas 2025-06-23 06:26:34 UTC
*** Bug 506009 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Baumgart 2025-06-23 06:30:18 UTC
Are the complete configuration and build logs for this (package) available somewhere?
Comment 4 İsmail 2025-06-23 06:59:26 UTC
(In reply to Thomas Baumgart from comment #3)
> Are the complete configuration and build logs for this (package) available
> somewhere?

Hi Thomas,

Can you elaborate please? How could I provide you that information as an end user?
Comment 5 Thomas Baumgart 2025-06-23 08:15:50 UTC
Git commit 8c4b84f290e50e62fbf90a61df8c701140a42715 by Thomas Baumgart.
Committed on 23/06/2025 at 08:15.
Pushed by tbaumgart into branch 'master'.

Port triggering actions to Qt6

Qt6 requires a QAction to be enabled to be triggered programmatically.
FIXED-IN: 5.2.1

M  +3    -0    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/8c4b84f290e50e62fbf90a61df8c701140a42715
Comment 6 Thomas Baumgart 2025-06-23 08:16:37 UTC
Git commit aac0449b4db5b060be5a52a7e5b0921da2a9843d by Thomas Baumgart.
Committed on 23/06/2025 at 08:16.
Pushed by tbaumgart into branch '5.2'.

Port triggering actions to Qt6

Qt6 requires a QAction to be enabled to be triggered programmatically.
FIXED-IN: 5.2.1
(cherry picked from commit 8c4b84f290e50e62fbf90a61df8c701140a42715)

M  +3    -0    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/aac0449b4db5b060be5a52a7e5b0921da2a9843d