Port triggering actions to Qt6

Qt6 requires a QAction to be enabled to be triggered programmatically.

BUG: 505977
FIXED-IN: 5.2.1